--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,102 +1,49 @@
-<!-- <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>  
-    <ion-buttons slot="end">
-      <ion-menu-button color="light" autoHide="false"></ion-menu-button>
-    </ion-buttons>           
-  </ion-toolbar>
-</ion-header> -->
+<!-- 
+  Changes for Anna once it looks how it's supposed to:
+  - Make tabs across the top lowercase
+  - Make background color white on image carosel at bottom
+  - Have medium sized font for "We advocate for childhood....."
+  - On safari the hamburger icon is green and not white
+  - Loopback on slide show images at bottom
+  - Schedule a tour button link to contact me page (lowercase laura font)
+  - Menu should be Raleway
+  - Keep dropdown for desktop under questions
+  - We can't wait to meet you shows twice on mobile under contact
+  - Take call, text, email buttons away on desktop
+  - For questions text should be raleway
+  - box around call or text goes off screen on Anna's phone
+-->
 
 <ion-content>
   <div class="top">
     <ion-toolbar class="toolbar">
+      <img slot="start" src="assets/img/stoneybrook-logo.png">
       <ion-buttons slot="end">
-        <ion-menu-button color="primary" autoHide="false"></ion-menu-button>
+        <ion-menu-button color="light" autoHide="false"></ion-menu-button>
       </ion-buttons>           
     </ion-toolbar>
-    <img class="logo" src="assets/img/logo.png">
-    <!-- <div class="title">
-      <h1>stoneybrook hollow</h1>
-      <p class="subtitle">reggio-inspired early learning studio</p>
-    </div> -->
   </div>
-  <div class="banner">
-    <div class="mission">
-      <div class="secondary">we cultivate</div>
-      <div class="primary">curiosity</div>
-      <div class="secondary">curiosity ignites</div>
-      <div class="primary">motivation</div>
-      <div class="secondary">motivation promotes</div>
-      <div class="primary">child-led learning</div>
-    </div>
+  <h2 class="model">We advocate for childhood through our play-based, curiosity-led approach to education.</h2>
+  <div class="video">
+    <iframe *ngIf="playVideo" src="https://player.vimeo.com/video/783980160?h=6ee0d9ebc2&amp;autoplay=1" width="100%" height="100%" frameborder="0" allow="autoplay"></iframe>
+    <ng-container *ngIf="!playVideo">
+      <div class="background-img"></div>
+      <div class="overlay" tappable (click)="playVideo = true">
+        <ion-icon name="play-circle-outline"></ion-icon>
+      </div>
+    </ng-container>
   </div>
-  <h2 class="model">what makes our model different?</h2>
-  <swiper [pagination]="true" [autoplay]="true" [config]="slideOpts">
-    <ng-template swiperSlide>
-      <div class="model-img cognitive">
-        <div class="label">cognitive</div>
-      </div>
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/cognitive/9.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/cognitive/10.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/cognitive/11.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/cognitive/12.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/cognitive/13.jpg">
-    </ng-template>
-  </swiper>
-  <div class="spacer"></div>
-  <swiper [pagination]="true">
-    <ng-template swiperSlide>
-      <div class="model-img social">
-        <div class="label">social</div>
-      </div>
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/social/14.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/social/15.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/social/16.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/social/17.jpg">
-    </ng-template>
-  </swiper>
-  <div class="spacer"></div>
-  <swiper [pagination]="true">
-    <ng-template swiperSlide>
-      <div class="model-img emotional">
-        <div class="label">emotional</div>
-      </div>
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/emotional/18.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/emotional/19.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/emotional/20.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/emotional/21.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/emotional/22.jpg">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="assets/img/emotional/23.jpg">
-    </ng-template>
-  </swiper>
+  <h2 class="model-white">our studio</h2>
+  <div class="slide-container">
+    <ion-icon class="back" name="chevron-back-circle-outline" tappable (click)="slideBack()"></ion-icon>
+    <ion-icon class="forward" name="chevron-forward-circle-outline" tappable (click)="slideForward()"></ion-icon>
+    <swiper [pagination]="true" [config]="slideOpts">
+      <ng-template swiperSlide *ngFor="let pic of slideshow; let index = index">
+        <img src="assets/img/slideshow/{{index + 1}}.jpg">
+      </ng-template>
+    </swiper>
+  </div>
+  <div class="bottom">
+    <ion-button mode="ios" color="primary">schedule a tour</ion-button>
+  </div>
 </ion-content>
