--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -1,55 +1,18 @@
 $brown: #5A4B2D;
 
-.top {
-    height: 140px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url('../../../assets/img/off-white-background.jpg');
-    background-position: center;
-    background-size: cover;
-    .toolbar {
-        position: absolute;
-        top: 0;
-        left: 0;
-        --background: transparent;
-    }
-    .logo {
-        width: 90%;
-        position: relative;
-        left: -15px;
+ion-toolbar {
+    background: transparent;
+    --background: transparent;
+    img {
+        height: 80px;
     }
 }
-.banner {
-    background-image: url('../../../assets/img/main-girl.jpg');
-    background-position: top;
-    background-size: cover;
+.top {
     width: 100%;
-    height: 500px;
-    position: relative;
-    .mission {
-        height: 100%;
-        padding-left: 15px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        .primary {
-            color: $brown;
-            font-size: 44px;
-            margin-top:  5px;
-            margin-bottom: 15px;
-            font-family: "Spartwell";
-        }
-        .secondary {
-            color:  var(--ion-color-primary);
-            font-size: 24px;
-            font-family: "Raleway";
-            font-weight: 600;
-        }
-    }
+    height: 700px;
+    background-image: url('/assets/img/main.jpg');
+    background-position: top center;
+    background-size: cover;
 }
 .model {
     background-color: var(--ion-color-primary);
@@ -64,36 +27,61 @@ $brown: #5A4B2D;
     margin-bottom: 0px;
     font-size: 30px;
 }
-.model-img {
+.model-white {
+    @extend .model;
+    background-color: white;
+    color: black;
+}
+.video {
     width: 100%;
     height: 400px;
-    background-position: top;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    .label {
-        background-color: rgba(255, 255, 255, 0.623);
+    position: relative;
+    .background-img {
+        background-image: url('/assets/img/video-thumbnail.jpeg');
+        background-position: center;
+        background-size: cover;
+        position: absolute;
         width: 100%;
-        height: 150px;
-        font-size: 40px;
-        font-weight: 600;
+        height: 100%;
+        z-index: 1;
+    }
+    .overlay {
+        background: rgba(255, 255, 255, 0.5);
+        position: absolute;
+        width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: 'Raleway';
-        color: $brown;
+        z-index: 2;
+    }
+    ion-icon {
+        font-size: 50px;
+        color: white;
     }
 }
-.cognitive {
-    background-image: url('../../../assets/img/cognitive.jpg');
+.slide-container {
+    position: relative;
+    .back {
+        color: white;
+        font-size: 40px;
+        position: absolute;
+        z-index: 10;
+        left: 20px;
+        top: calc(50% - 10px);
+    }
+    .forward {
+        color: white;
+        font-size: 40px;
+        position: absolute;
+        z-index: 10;
+        right: 20px;
+        top: calc(50% - 10px);
+    }
 }
-.social {
-    background-image: url('../../../assets/img/social.jpg');
-}
-.emotional {
-    background-image: url('../../../assets/img/emotional.jpg');
-}
-.spacer {
-    width: 100%;
-    height: 10px;
+.bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
 }
