--- a/src/app/pages/contact-us/contact-us.page.html
+++ b/src/app/pages/contact-us/contact-us.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="hide-l">
   <ion-toolbar>
     <ion-title>contact</ion-title>
     <ion-buttons slot="end">
@@ -8,11 +8,12 @@
 </ion-header>
 
 <ion-content>
+  <app-web-header class="hide-s"></app-web-header>
   <div class="main-image">
-    <h1>we can't wait to meet you!</h1>
     <div class="brown-box">
+      <h1>we can't wait to meet you!</h1>
       <p>For questions or to apply, please contact Anna Crabb.</p>
-      <div class="contact-buttons">
+      <div class="hide-l contact-buttons">
         <ion-button fill="outline" color="light" size="small" href="tel:4358402031">
           <ion-icon slot="start" name="call"></ion-icon>
           call
@@ -26,20 +27,10 @@
           email
         </ion-button>
       </div>
+
+      <div class="info hide-s">
+        <div class="item"> Call or Text: 435-840-2031 </div>
+        <div class="item"> Email: annac895@gmail.com </div></div>
     </div>
   </div>
-  <!-- <div class="top">
-    <img src="assets/img/girl-reaching.jpg">
-    <div class="contact-buttons">
-      <ion-button expand="block" color="light" href="tel:4358402031">
-        <ion-icon slot="start" name="call"></ion-icon>
-        Call
-      </ion-button>
-      <ion-button expand="block" color="light" href="sms:4358402031">
-        <ion-icon slot="start" name="chatbubbles"></ion-icon>
-        Text
-      </ion-button>
-    </div>
-  </div>
-  <p class="pink">To apply or to ask further questions, please call or text Anna Crabb at <a tappable (click)="copyPhone()">435-840-2031</a> to set up an interview. We want to make sure this unique learning environment is a good fit for your family.</p> -->
 </ion-content>
