--- a/src/app/pages/contact-us/contact-us.page.scss
+++ b/src/app/pages/contact-us/contact-us.page.scss
@@ -2,17 +2,16 @@
     height: 100%;
     width: 100%;
     opacity: .74;
-    background-image: url('../../../assets/img/girl-sitting.jpg');
+    background-image: url('../../../assets/img/contact.jpg');
     background-position: top 0px left 0px;
     background-size: cover;
     position: relative;
+    padding-top: 30px;
     h1 {
         margin: 0px;
         padding: 15px;
         width: 100%;
-        font-size: 36px;
         color: white;
-        font-family: "Lora";
     }
     .brown-box {
         padding: 10px;
@@ -39,6 +38,14 @@
                     font-size: 24px;
                 }
             }
+        }
+        .info {
+            border: 1px solid white;
+            width: 400px;
+            margin: 20px auto;
+            padding: 20px;
+            font-size: 1.5em;
+            color: white;
         }
     }
 }
