--- a/src/app/pages/faq/faq.page.html
+++ b/src/app/pages/faq/faq.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="hide-l">
   <ion-toolbar>
     <ion-title>questions</ion-title>
     <ion-buttons slot="end">
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content>
+  <app-web-header class="hide-s"></app-web-header>
   <ion-accordion-group>
     <ion-accordion *ngFor="let faq of faqs; let index = index" [value]="faq.question" toggle-icon="arrow-down-circle">
       <ion-item slot="header" tappable (click)="checkToScroll(index)">
