changes via anna

--- a/src/app/components/web-header/web-header.component.scss
+++ b/src/app/components/web-header/web-header.component.scss
@@ -4,8 +4,7 @@ ion-toolbar {
         height: 80px;
     }
     ion-button {
-        font-size: x-large;
-        font-family: 'Raleway';
+        font-size: large;
     }
 }
 .transparent {
