upgrade angular and other packes

--- a/src/app/components/web-header/web-header.component.html
+++ b/src/app/components/web-header/web-header.component.html
@@ -10,7 +10,7 @@
       <ion-button fill="clear" mode="ios" color="light" (click)="navigate('contact')">
         contact
       </ion-button>
-      <ion-button fill="clear" mode="ios" color="light" (click)="navigate('contact')">
+      <ion-button fill="clear" mode="ios" color="light" (click)="navigate('learn')">
         how we learn
       </ion-button>
     </ion-buttons>           
