--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,7 +30,7 @@
   --ion-color-primary-tint: #91a38d;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  --ion-color-secondary: #5A4B2D;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
