resolve dependency issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,14 @@
           </ion-label>
         </ion-item>
       </ion-menu-toggle>
+
+      <ion-menu-toggle autoHide="false">
+        <ion-item routerLink="/learn" routerLinkActive="active" routerDirection="root" detail="false">
+          <ion-label>
+            how we learn
+          </ion-label>
+        </ion-item>
+      </ion-menu-toggle>
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="main-content"></ion-router-outlet>
