--- a/src/app/pages/learn/learn.page.scss
+++ b/src/app/pages/learn/learn.page.scss
@@ -24,3 +24,8 @@ p {
     padding: 0px 30px;
     line-height: 1.2em;
 }
+.topics {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
+}
