--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -12,7 +12,7 @@
   <img class="hide-l" src="assets/img/learn-main.jpg">
   <h1>how we learn</h1>
   <section>
-    <div>
+    <div class="explanation">
       <p>
         We value research-based, best practice in Early Childhood Education: Children learn best through PLAY! But what exactly are they learning? 
       </p>
@@ -32,36 +32,36 @@
         <ion-button fill="clear" size="large" (click)="scroll(science)">science</ion-button>
       </div>
     </div>
-    <img class="hide-s" src="assets/img/learn-main.jpg">
+    <div class="hide-s first-pic"></div>
   </section>
   <h2 #socialStudies>social studies</h2>
-  <img class="hide-l" src="assets/img/learn-main.jpg">
+  <img class="hide-l" src="assets/img/learn/social_studies.jpg">
   <section>
-    <img class="hide-s" src="assets/img/learn-main.jpg">
+    <img class="hide-s" src="assets/img/learn/social_studies.jpg">
     <p>Social Studies: As children arrive, they notice the studio is decorated with colorful silk lanterns and can hear traditional Chinese music playing. Today we’re celebrating Chinese New Year! Children gather around the rug to explore traditional artifacts from China. We read a story about the holiday and consult the globe to see where China is located. </p>
   </section>
   <h2 #math>math</h2>
-  <img class="hide-l" src="assets/img/learn-main.jpg">
+  <img class="hide-l" src="assets/img/learn/math.jpg">
   <section>
     <div>
       <p>Math: A child prepares a snack for the group - oranges today (considered good luck for the Lunar New Year!). They use one-to-one correspondence to figure out how many plates are needed. They divide up orange slices evenly among the group. We count aloud together to determine accuracy. </p>
       <p>When developmentally appropriate and relevant, we use specialized materials to help children master specific, foundational math skills. </p>
     </div>
-    <img class="hide-s" src="assets/img/learn-main.jpg">
+    <img class="hide-s" src="assets/img/learn/math.jpg">
   </section>
   <h2 #languageArts>language arts</h2>
-  <img class="hide-l" src="assets/img/learn-main.jpg">
+  <img class="hide-l" src="assets/img/learn/language.jpg">
   <section>
-    <img class="hide-s" src="assets/img/learn-main.jpg">
+    <img class="hide-s" src="assets/img/learn/language.jpg">
     <div>
       <p>Language Arts: During snack, we play sound games together! We come up with rhyming words or listen to the first sound we hear in a group of words. This is called phonemic awareness and is a foundational literacy skill. </p>
       <p>When a child is developmentally ready and interested, we use child-led materials to foster early literacy and writing skills. Our number one goal is to foster a life-long love of learning. We always follow the child’s unique timing with this endeavor. </p>
     </div>
   </section>
   <h2 #science>science</h2>
-  <img class="hide-l" src="assets/img/learn-main.jpg">
+  <img class="hide-l" src="assets/img/learn/science.jpg">
   <section>
     <p>Science: After snack, we clean up and head outside. Children head to our nature cart to gather any supplies they might need for investigating. They learn how to use a variety of scientific tools including a magnifying glass, stop watch, tape measurer, and binoculars. They record their observations in their nature journals. </p>
-    <img class="hide-s" src="assets/img/learn-main.jpg">
+    <img class="hide-s" src="assets/img/learn/science.jpg">
   </section>
 </ion-content>
