--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,14 @@
       </ion-menu-toggle>
 
       <ion-menu-toggle autoHide="false">
+        <ion-item routerLink="/about" routerLinkActive="active" routerDirection="root" detail="false">
+          <ion-label>
+            about
+          </ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle autoHide="false">
         <ion-item routerLink="/learn" routerLinkActive="active" routerDirection="root" detail="false">
           <ion-label>
             how we learn
