--- a/src/app/components/web-header/web-header.component.html
+++ b/src/app/components/web-header/web-header.component.html
@@ -10,6 +10,9 @@
       <ion-button fill="clear" mode="ios" color="light" (click)="navigate('contact')">
         contact
       </ion-button>
+      <ion-button fill="clear" mode="ios" color="light" (click)="navigate('about')">
+        about
+      </ion-button>
       <ion-button fill="clear" mode="ios" color="light" (click)="navigate('learn')">
         how we learn
       </ion-button>
