--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -1,28 +1,86 @@
-<ion-header>
+<ion-header class="hide-l">
   <ion-toolbar>
-    <ion-title>About</ion-title>
+    <ion-title>about</ion-title>
     <ion-buttons slot="end">
-      <ion-menu-button autoHide="false"></ion-menu-button>
+      <ion-menu-button color="light" autoHide="false"></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <img src="assets/img/david3.jpg">
-    <ion-card-content>
-      All my life I've been in the shop. If we needed something my first instinct is what will it take to build it, not where I can buy it. -David Christensen
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <img src="assets/img/hand.jpg">
-    <ion-card-header>
-      <ion-card-subtitle>Our Mission</ion-card-subtitle>
-      <ion-card-title>Create something unique and beautiful for each and every one of our clients.</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <p>We believe woodworking is an art.  Ezra Furniture Co. gives its clients the opportunity to design the home of their dreams.  Furniture is the life blood of any interior design, so let us build something that will last more then a lifetime.</p>
-      <p>David started Ezra Furniture Co in 2018 after growing up in the woodshop. His father worked at a cabinet shop then ran a hardwood floor company so David was exposed to woodworking since he was a child. </p>
-    </ion-card-content>
-  </ion-card>
+  <app-web-header class="hide-s"></app-web-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
+        <ion-card>
+          <img alt="Miss Anna portrait" src="assets/img/about/anna.png" />
+          <ion-card-header>
+            <ion-card-title>Miss Anna</ion-card-title>
+            <ion-card-subtitle>Owner & Guide</ion-card-subtitle>
+          </ion-card-header>
+          <ion-button color="tertiary" fill="clear" (click)="scroll(anna)">Read bio</ion-button>
+        </ion-card>
+      </ion-col>
+      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
+        <ion-card>
+          <img alt="Miss Kait portrait" src="assets/img/about/kait.png" />
+          <ion-card-header>
+            <ion-card-title>Miss Kait</ion-card-title>
+            <ion-card-subtitle>Assistant</ion-card-subtitle>
+          </ion-card-header>
+          <ion-button color="tertiary" fill="clear" (click)="scroll(kait)">Read bio</ion-button>
+        </ion-card>
+      </ion-col>
+      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
+        <ion-card>
+          <img alt="Miss Steph portrait" src="assets/img/about/steph.png" />
+          <ion-card-header>
+            <ion-card-title>Miss Steph</ion-card-title>
+            <ion-card-subtitle>Assistant</ion-card-subtitle>
+          </ion-card-header>
+          <ion-button color="tertiary" fill="clear" (click)="scroll(steph)">Read bio</ion-button>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <h2 #anna>
+    Miss Anna<br>
+    <small>Owner & Guide</small>
+  </h2>
+  <img class="hide-l" src="assets/img/about/anna.png">
+  <section>
+    <img class="hide-s" src="assets/img/about/anna.png">
+    <div>
+      <p>Anna spent her childhood in the rural outskirts of Grantsville, Utah, where she spent hours wrapped up in elaborate imaginative play, usually involving some combination of Barbie dolls, cardboard, and her mom’s fabric box.</p>
+      <p>As an adult, she received her bachelor's degree in human development with a minor in international development, where she focused on issues in childhood development and education. She is particularly passionate about innovative education, which is what inspired her to found Stoneybrook Hollow.</p>
+      <p>Anna is trained in the Montessori philosophy and was the lead guide in the primary classroom at Lighthouse Montessori Academy in Provo. Following her time there, she had the opportunity to create the early childhood studio at Choice Academy in Bountiful. She was the lead guide there, where she honed her Montessori skills and experimented with innovative ideas in education, including the principles of Reggio Emilia.</p>
+      <p>She now resides in Kaysville, with her husband, Davis, and her two young children. They love trying new foods, playing board games, tackling home renovation projects and having impassioned conversations about their dreams!</p>
+    </div>
+  </section>
+  <h2 #kait>
+    Miss Kait<br>
+    <small>Assistant</small>
+  </h2>
+  <img class="hide-l" src="assets/img/about/kait.png">
+  <section>
+    <div>
+      <p>Kaitlin spent her childhood helping her mom in her reading classroom, collecting beanie babies, and dreaming up new adventures every summer in the mountains at her family cabin. It was Narnia-themed - paving the way for lots of magic!</p>
+      <p>Although she got her degree in nursing, teaching has always been dear to her heart. In addition to teaching piano and choir, she lived for some time in Ukraine, teaching English to young children. As a young mother she began devouring many books and courses on parenting, schooling methods, and child development. This launched her into the world of Early Childhood Education. Last year she toured a Reggio Emilia-inspired Kindergarten in Germany that brought her to tears (yes, actual tears). She knew that this was what she wanted to spend her time doing!</p>
+      <p>Kait is passionate about the outdoors, music and nutrition. In her spare time you will find her attempting not to kill her sourdough starter (again), reading, and making memories with her husband, two children, and dog, Poppy.</p>
+    </div>
+    <img class="hide-s" src="assets/img/about/kait.png">
+  </section>
+  <h2 #steph>
+    Miss Steph<br>
+    <small>Assistant</small>
+  </h2>
+  <img class="hide-l" src="assets/img/about/steph.png">
+  <section>
+    <img class="hide-s" src="assets/img/about/steph.png">
+    <div>
+      <p>Stephanie spent her childhood climbing trees, making gourmet dinners from bark, grass and rocks and pretending her bunk bed was a covered wagon. She developed a love for little kids early on and spent many hours babysitting and playing with little siblings and cousins.</p>
+      <p>She grew up to earn a bachelor's degree in Early Childhood Education from the University of Utah, her favorite part being the time she spent student teaching in a play-based, child-led Kindergarten. She has since spent the last 11 years re-living the magic of childhood with her own four daughters.</p>
+      <p>She is happiest reading piles of picture books in a hammock with one or more children on top of her, exploring nature through the eyes of her kids and taking pictures as they create the mud pie dinners she was once so fond of. She can't wait to join the Stoneybrook Hollow team and continue to experience the wonder of children learning and exploring the world through play.</p>
+    </div>
+  </section>
 </ion-content>
