--- a/src/app/components/web-header/web-header.component.html
+++ b/src/app/components/web-header/web-header.component.html
@@ -1,17 +1,17 @@
 <ion-toolbar class="toolbar" [class.transparent]="transparent">
-    <img slot="start" src="assets/img/stoneybrook-logo.png">
+    <img slot="start" src="assets/img/stoneybrook-logo.png" tappable (click)="navigate('landing')">
     <ion-buttons slot="end">
       <ion-button fill="clear" mode="ios" color="light" (click)="navigate('landing')">
         home
+      </ion-button>
+      <ion-button fill="clear" mode="ios" color="light" (click)="navigate('about')">
+        about
       </ion-button>
       <ion-button fill="clear" mode="ios" color="light" (click)="navigate('faq')">
         questions
       </ion-button>
       <ion-button fill="clear" mode="ios" color="light" (click)="navigate('contact')">
         contact
-      </ion-button>
-      <ion-button fill="clear" mode="ios" color="light" (click)="navigate('about')">
-        about
       </ion-button>
       <ion-button fill="clear" mode="ios" color="light" (click)="navigate('learn')">
         how we learn
