--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -9,6 +9,7 @@
 
 <ion-content>
   <app-web-header class="hide-s"></app-web-header>
+  <h1>our team</h1>
   <ion-grid>
     <ion-row>
       <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
@@ -16,9 +17,9 @@
           <img alt="Miss Anna portrait" src="assets/img/about/anna.png" />
           <ion-card-header>
             <ion-card-title>Miss Anna</ion-card-title>
-            <ion-card-subtitle>Owner & Guide</ion-card-subtitle>
+            <ion-card-subtitle>Owner & Lead Guide</ion-card-subtitle>
           </ion-card-header>
-          <ion-button color="tertiary" fill="clear" (click)="scroll(anna)">Read bio</ion-button>
+          <ion-button color="seconary" fill="clear" (click)="scroll(anna)">Read bio</ion-button>
         </ion-card>
       </ion-col>
       <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
@@ -26,9 +27,9 @@
           <img alt="Miss Kait portrait" src="assets/img/about/kait.png" />
           <ion-card-header>
             <ion-card-title>Miss Kait</ion-card-title>
-            <ion-card-subtitle>Assistant</ion-card-subtitle>
+            <ion-card-subtitle>Assistant Guide</ion-card-subtitle>
           </ion-card-header>
-          <ion-button color="tertiary" fill="clear" (click)="scroll(kait)">Read bio</ion-button>
+          <ion-button color="seconary" fill="clear" (click)="scroll(kait)">Read bio</ion-button>
         </ion-card>
       </ion-col>
       <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
@@ -36,9 +37,9 @@
           <img alt="Miss Steph portrait" src="assets/img/about/steph.png" />
           <ion-card-header>
             <ion-card-title>Miss Steph</ion-card-title>
-            <ion-card-subtitle>Assistant</ion-card-subtitle>
+            <ion-card-subtitle>Assistant Guide</ion-card-subtitle>
           </ion-card-header>
-          <ion-button color="tertiary" fill="clear" (click)="scroll(steph)">Read bio</ion-button>
+          <ion-button color="seconary" fill="clear" (click)="scroll(steph)">read bio</ion-button>
         </ion-card>
       </ion-col>
     </ion-row>
