--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -32,7 +32,7 @@
         <ion-button fill="clear" size="large" (click)="scroll(science)">science</ion-button>
       </div>
     </div>
-    <div class="hide-s first-pic"></div>
+    <img class="hide-s" src="assets/img/learn-main.jpeg">
   </section>
   <h2 #socialStudies>social studies</h2>
   <img class="hide-l" src="assets/img/learn/social_studies.jpg">
