--- a/src/app/pages/learn/learn.page.scss
+++ b/src/app/pages/learn/learn.page.scss
@@ -4,6 +4,7 @@ h1 {
     text-align: center;
     padding: 30px 0px;
     font-size: xx-large !important;
+    margin: 0px;
 }
 h2 {
     background: var(--ion-color-primary-shade);
@@ -21,14 +22,6 @@ section {
     font-family: 'raleway';
     img {
         width: 50%;
-    }
-    .first-pic {
-        width: 100%;
-        max-height: 800px;
-        min-height: 200px;
-        background-image: url('/assets/img/learn-main.jpg');
-        background-position: center;
-        background-size: cover;
     }
 }
 p {
