--- a/src/theme/_fonts.scss
+++ b/src/theme/_fonts.scss
@@ -7,3 +7,4 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&display=swap');
