--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -35,7 +35,8 @@ ion-card {
 }
 
 h1 {
-    font-family: "Lora";
+  font-family: 'Dawning of a New Day';
+  font-size: 3em !important;
 }
 h2 {
     font-family: "Lora";
