--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -60,7 +60,7 @@
   </section>
   <h2 #kait>
     Miss Kait<br>
-    <small>Assistant</small>
+    <small>Assistant Guide</small>
   </h2>
   <img class="hide-l" src="assets/img/about/kait.png">
   <section>
@@ -73,7 +73,7 @@
   </section>
   <h2 #steph>
     Miss Steph<br>
-    <small>Assistant</small>
+    <small>Assistant Guide</small>
   </h2>
   <img class="hide-l" src="assets/img/about/steph.png">
   <section>
