--- a/src/app/pages/about/about.page.scss
+++ b/src/app/pages/about/about.page.scss
@@ -3,7 +3,6 @@ h1 {
     color: white;
     text-align: center;
     padding: 30px 0px;
-    font-size: xx-large !important;
     margin: 0px;
 }
 h2 {
@@ -12,6 +11,12 @@ h2 {
     text-align: center;
     padding: 20px 0px;
     margin: 0px;
+    font-family: 'Dawning of a New Day';
+    font-size: 2.5em;
+    small {
+        font-family: 'Lora';
+        font-size: .6em;
+    }
 }
 section {
     display: flex;
