--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -12,41 +12,51 @@
   <h1>our team</h1>
   <ion-grid>
     <ion-row>
-      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
+      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="3" sizeXl="3">
         <ion-card>
           <img alt="Miss Anna portrait" src="assets/img/about/anna.png" />
           <ion-card-header>
             <ion-card-title>Miss Anna</ion-card-title>
-            <ion-card-subtitle>Owner & Lead Guide</ion-card-subtitle>
+            <ion-card-subtitle>Owner & Teacher</ion-card-subtitle>
           </ion-card-header>
           <ion-button color="seconary" fill="clear" (click)="scroll(anna)">Read bio</ion-button>
         </ion-card>
       </ion-col>
-      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
+      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="3" sizeXl="3">
         <ion-card>
           <img alt="Miss Kait portrait" src="assets/img/about/kait.png" />
           <ion-card-header>
             <ion-card-title>Miss Kait</ion-card-title>
-            <ion-card-subtitle>Assistant Guide</ion-card-subtitle>
+            <ion-card-subtitle>Teacher</ion-card-subtitle>
           </ion-card-header>
           <ion-button color="seconary" fill="clear" (click)="scroll(kait)">Read bio</ion-button>
         </ion-card>
       </ion-col>
-      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="4" sizeXl="4">
+      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="3" sizeXl="3">
         <ion-card>
           <img alt="Miss Steph portrait" src="assets/img/about/steph.png" />
           <ion-card-header>
             <ion-card-title>Miss Steph</ion-card-title>
-            <ion-card-subtitle>Assistant Guide</ion-card-subtitle>
+            <ion-card-subtitle>Teacher</ion-card-subtitle>
           </ion-card-header>
           <ion-button color="seconary" fill="clear" (click)="scroll(steph)">read bio</ion-button>
+        </ion-card>
+      </ion-col>
+      <ion-col sizeXs="12" sizeSm="6" sizeMd="6" sizeLg="3" sizeXl="3">
+        <ion-card>
+          <img alt="Miss Aubrie portrait" src="assets/img/about/aubrie.jpg" />
+          <ion-card-header>
+            <ion-card-title>Miss Aubrie</ion-card-title>
+            <ion-card-subtitle>Teacher</ion-card-subtitle>
+          </ion-card-header>
+          <ion-button color="seconary" fill="clear" (click)="scroll(aubrie)">read bio</ion-button>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
   <h2 #anna>
     Miss Anna<br>
-    <small>Owner & Guide</small>
+    <small>Owner & Teacher</small>
   </h2>
   <img class="hide-l" src="assets/img/about/anna.png">
   <section>
@@ -60,7 +70,7 @@
   </section>
   <h2 #kait>
     Miss Kait<br>
-    <small>Assistant Guide</small>
+    <small>Teacher</small>
   </h2>
   <img class="hide-l" src="assets/img/about/kait.png">
   <section>
@@ -73,7 +83,7 @@
   </section>
   <h2 #steph>
     Miss Steph<br>
-    <small>Assistant Guide</small>
+    <small>Teacher</small>
   </h2>
   <img class="hide-l" src="assets/img/about/steph.png">
   <section>
@@ -83,5 +93,18 @@
       <p>She grew up to earn a bachelor's degree in Early Childhood Education from the University of Utah, her favorite part being the time she spent student teaching in a play-based, child-led Kindergarten. She has since spent the last 11 years re-living the magic of childhood with her own four daughters.</p>
       <p>She is happiest reading piles of picture books in a hammock with one or more children on top of her, exploring nature through the eyes of her kids and taking pictures as they create the mud pie dinners she was once so fond of. She can't wait to join the Stoneybrook Hollow team and continue to experience the wonder of children learning and exploring the world through play.</p>
     </div>
+  </section>
+    <h2 #aubrie>
+    Miss Aubrie<br>
+    <small>Teacher</small>
+  </h2>
+  <img class="hide-l" src="assets/img/about/aubrie.jpg">
+  <section>
+    <div>
+      <p>Aubrie spent her childhood in the small town of Monroe, Utah, where her time was filled with hiking mountains, climbing trees, chasing butterflies and swimming in the surrounding lakes. If she wasn’t adventuring outdoors, she was spending time in her dad’s classroom, pretending to be a teacher herself.</p>
+      <p>Her love for learning and educating was solidified when she graduated high school and began working at a Montessori-inspired preschool. This opened her eyes to child-led learning and developed her passion to create individualized learning based on each child. During this time, Aubrie received her certification in Montessori and was able to shadow at a few of Utah’s top Montessori schools.</p>
+      <p>She now lives in Layton, Utah with her husband, Chris and 4-year-old twins, Haddie and Hendrik. Becoming a mom has given Aubrie a deeper appreciation for childhood and the joy children create. She is excited to be a positive, encouraging guide at Stoneybrook Hollow!</p>
+    </div>
+    <img class="hide-s" src="assets/img/about/aubrie.jpg">
   </section>
 </ion-content>
